//****************************************************************

// In this file I will define the protobuf messages and services for the GRPC service,
// and I will start with defining following messages:

//****************************************************************


// This message will contain the movie information such as name, poster, description, and genres.
message Movie {
	string name = 1;
	string poster = 2;
	string description = 3;
	repeated string genres = 4;
  }
  
  // This message will contain the search
  message SearchRequest {
	string movieName = 1;
  }
  
  // This message will contain the search results,so it will return a list of Movie objects.
  message SearchResponse {
	repeated Movie movies = 1;
  }
  
  // This message will contain the Movie object that the user wants to add to their favorites.
  message AddToFavoritesRequest {
	Movie movie = 1;
  }

  // This message will contain a Confirm that the movie has been added to the user favorites
  message AddToFavoritesResponse {
	string message = 1;
  }
  
  // This message will contain the Movie object that the user wants to remove from their favorites
  message RemoveFromFavoritesRequest {
	Movie movie = 1;
  }
  
  // This message will contain a Confirm that the movie has been removed from the user favorites
  message RemoveFromFavoritesResponse {
	string message = 1;
  }
  

  //****************************************************************

  // NOW we will define the gRPC service with following methods:
  
  //****************************************************************


  // This method will return the latest movies.
  service MovieService {
	rpc GetLatestMovies(Empty) returns (SearchResponse) {}
  }
  
  // This method will accept a SearchRequest object and return the search results.
  service MovieService {
	rpc SearchMovies(SearchRequest) returns (SearchResponse) {}
  }
  
  // This method will accept an AddToFavoritesRequest object and return a confirmation
  // that the movie has been added to the user favorites.
  service MovieService {
	rpc AddToFavorites(AddToFavoritesRequest) returns (AddToFavoritesResponse) {}
  }
  
  // This method would accept a RemoveFromFavoritesRequest object and return a confirmation
  // that the movie has been removed from the user's favorites
  service MovieService {
	rpc RemoveFromFavorites(RemoveFromFavoritesRequest) returns (RemoveFromFavoritesResponse) {}
  }
  
  
